tests/NormalTests/paczka1/small_fuzzy/47767466.err
Error in line 7: YBNHXHvq S361 27,0
Error in line 2: chz S361 48,7
Error in line 11: chz S848 18,3
